--- a/css/style.css
+++ b/css/style.css
@@ -240,10 +240,22 @@ body{
 .checkout {
     color: #eee;
     font-weight: bold;
-    align-items: center;
+    float: left;
+    align-items: center; /* Jika ini adalah flex container */
 }
 
-
+#notFoundMessage {
+    position: fixed;
+    top: 50%;
+    left: 52%;
+    background: #dddddd;
+    padding: 10px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    display: none;
+}
 
 .payment{
     height: 8vh;
